# ChangeLog for app-text/aiksaurus
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.36 2010/01/02 10:54:45 fauli Exp $

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  aiksaurus-1.2.1.ebuild:
  Transfer Prefix keywords

  24 Sep 2008; Alexis Ballier <aballier@gentoo.org> aiksaurus-1.2.1.ebuild:
  Keyword x86-fbsd, call libtoolize to have it installable and with a sane
  .so versionning there, move patching to src_unpack.

  29 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/aiksaurus-1.2.1-gcc43.patch, aiksaurus-1.2.1.ebuild:
  Added a patch for gcc 4.3 compatibility as kindly provided by truedfx on
  bug 214248.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  21 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  aiksaurus-1.2.1.ebuild:
  Stable on amd64 and x86 wrt bug #144120.

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  aiksaurus-1.2.1.ebuild:
  ppc stable, bug #144120

  17 Aug 2006; Jeroen Roovers <jer@gentoo.org> aiksaurus-1.2.1.ebuild:
  Stable for HPPA (bug #144120).

  03 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  aiksaurus-1.2.1.ebuild:
  Stable on sparc

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> aiksaurus-1.2.1.ebuild:
  Mark 1.2.1 stable on ia64

  22 Feb 2006; Aron Griffis <agriffis@gentoo.org> aiksaurus-1.2.1.ebuild:
  Mark 1.2.1 ~ia64

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> aiksaurus-1.2.1.ebuild:
  Mark 1.2.1 stable on alpha

  30 Nov 2005; Tom Gall <tgall@gentoo.org> aiksaurus-1.2.1.ebuild:
  stable on ppc64

  31 Oct 2005; Brent Baude <ranger@gentoo.org> aiksaurus-1.2.1.ebuild:
  Marking aiksaurus-1.2.1 ~ppc64 for bug 110862

  05 Oct 2005; Simon Stelling <blubb@gentoo.org> aiksaurus-0.15-r1.ebuild: