@@ -1,6 +1,9 @@
 # ChangeLog for app-text/aiksaurus
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.36 2010/01/02 10:54:45 fauli Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.37 2011/03/24 09:04:12 ssuominen Exp $
+
+  24 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> aiksaurus-1.2.1.ebuild:
+  Use SLOT dependencies for x11-libs/gtk+.
 
   02 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   aiksaurus-1.2.1.ebuild:
